sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: illegal start of simple pattern
var = inv = true
    ^AlgBubbleSort2:7: error: '=' expected but ';' found.
	for  (i<- 0 to getNombreValeurs()-2 to 0)
^AlgBubbleSort2:13: error: Unmatched closing brace '}' ignored here
		} while (inv= true)
                ^AlgBubbleSort2:14: error: Unmatched closing brace '}' ignored here
		}
                ^AlgBubbleSort2:25: error: illegal start of simple expression
}
^